--- a/src/Microsoft.Extensions.Logging.Abstractions/Microsoft.Extensions.Logging.Abstractions.csproj
+++ b/src/Microsoft.Extensions.Logging.Abstractions/Microsoft.Extensions.Logging.Abstractions.csproj
@@ -11,16 +11,8 @@
 
   <PropertyGroup Label="NuGet">
     <PackageId>NetFx.Extensions.Logging.Abstractions</PackageId>
-    <Title>Microsoft.Extensions.Logging.Abstractions-net40-net451-fork</Title>
-    <Description>Logging abstractions for Microsoft.Extensions.Logging.
-Commonly used types:
-Microsoft.Extensions.Logging.ILogger
-Microsoft.Extensions.Logging.ILoggerFactory
-Microsoft.Extensions.Logging.ILogger&lt;TCategoryName&gt;
-Microsoft.Extensions.Logging.LogLevel
-Microsoft.Extensions.Logging.Logger&lt;T&gt;
-Microsoft.Extensions.Logging.LoggerMessage
-Microsoft.Extensions.Logging.Abstractions.NullLogger</Description>
+    <Title>Ms.Extensions.Logging.Abstractions-net40-net451-fork</Title>
+    <Description>Logging abstractions for Ms.Extensions.Logging.</Description>
     <PackageTags>logging</PackageTags>
   </PropertyGroup>
 
