--- a/src/CuteAnt.Text.RegularExpressions/CuteAnt.Text.RegularExpressions.csproj
+++ b/src/CuteAnt.Text.RegularExpressions/CuteAnt.Text.RegularExpressions.csproj
@@ -11,7 +11,7 @@
 
   <PropertyGroup Label="NuGet">
     <PackageId>CuteAnt.Text.RegularExpressions</PackageId>
-    <Title>System.Text.RegularExpressions-net40-fork</Title>
+    <Title>Corefx.Text.RegularExpressions-net40-fork</Title>
     <Description>Provides the System.Text.RegularExpressions.Regex class, an implementation of a regular expression engine.</Description>
     <PackageTags>Regular</PackageTags>
   </PropertyGroup>
