--- a/src/Microsoft.Extensions.Configuration.Binder/Microsoft.Extensions.Configuration.Binder.csproj
+++ b/src/Microsoft.Extensions.Configuration.Binder/Microsoft.Extensions.Configuration.Binder.csproj
@@ -11,8 +11,8 @@
 
   <PropertyGroup Label="NuGet">
     <PackageId>NetFx.Extensions.Configuration.Binder</PackageId>
-    <Description>Functionality to bind an object to data in configuration providers for Microsoft.Extensions.Configuration.</Description>
-    <Title>Microsoft.Extensions.Configuration.Binder-net40-net451-fork</Title>
+    <Description>Functionality to bind an object to data in configuration providers for Ms.Extensions.Configuration.</Description>
+    <Title>Ms.Extensions.Configuration.Binder-net40-net451-fork</Title>
     <PackageTags>configuration</PackageTags>
   </PropertyGroup>
 
