--- a/src/Microsoft.Extensions.Configuration.CommandLine/Microsoft.Extensions.Configuration.CommandLine.csproj
+++ b/src/Microsoft.Extensions.Configuration.CommandLine/Microsoft.Extensions.Configuration.CommandLine.csproj
@@ -11,8 +11,8 @@
 
   <PropertyGroup Label="NuGet">
     <PackageId>NetFx.Extensions.Configuration.CommandLine</PackageId>
-    <Description>Command line configuration provider implementation for Microsoft.Extensions.Configuration.</Description>
-    <Title>Microsoft.Extensions.Configuration.CommandLine-net40-net451-fork</Title>
+    <Description>Command line configuration provider implementation for Ms.Extensions.Configuration.</Description>
+    <Title>Ms.Extensions.Configuration.CommandLine-net40-net451-fork</Title>
     <PackageTags>configuration</PackageTags>
   </PropertyGroup>
 
