--- a/src/Microsoft.Extensions.Configuration.FileExtensions/Microsoft.Extensions.Configuration.FileExtensions.csproj
+++ b/src/Microsoft.Extensions.Configuration.FileExtensions/Microsoft.Extensions.Configuration.FileExtensions.csproj
@@ -11,8 +11,8 @@
 
   <PropertyGroup Label="NuGet">
     <PackageId>NetFx.Extensions.Configuration.FileExtensions</PackageId>
-    <Description>Extension methods for configuring file-based configuration providers for Microsoft.Extensions.Configuration.</Description>
-    <Title>Microsoft.Extensions.Configuration.FileExtensions-net40-net451-fork</Title>
+    <Description>Extension methods for configuring file-based configuration providers for Ms.Extensions.Configuration.</Description>
+    <Title>Ms.Extensions.Configuration.FileExtensions-net40-net451-fork</Title>
     <PackageTags>configuration</PackageTags>
   </PropertyGroup>
 
