--- a/src/Microsoft.Extensions.Configuration.Ini/Microsoft.Extensions.Configuration.Ini.csproj
+++ b/src/Microsoft.Extensions.Configuration.Ini/Microsoft.Extensions.Configuration.Ini.csproj
@@ -11,8 +11,8 @@
 
   <PropertyGroup Label="NuGet">
     <PackageId>NetFx.Extensions.Configuration.Ini</PackageId>
-    <Description>INI configuration provider implementation for Microsoft.Extensions.Configuration.</Description>
-    <Title>Microsoft.Extensions.Configuration.Ini-net40-net451-fork</Title>
+    <Description>INI configuration provider implementation for Ms.Extensions.Configuration.</Description>
+    <Title>Ms.Extensions.Configuration.Ini-net40-net451-fork</Title>
     <PackageTags>configuration</PackageTags>
   </PropertyGroup>
 
