--- a/src/Microsoft.Extensions.Configuration.Json/Microsoft.Extensions.Configuration.Json.csproj
+++ b/src/Microsoft.Extensions.Configuration.Json/Microsoft.Extensions.Configuration.Json.csproj
@@ -11,8 +11,8 @@
 
   <PropertyGroup Label="NuGet">
     <PackageId>NetFx.Extensions.Configuration.Json</PackageId>
-    <Description>JSON configuration provider implementation for Microsoft.Extensions.Configuration.</Description>
-    <Title>Microsoft.Extensions.Configuration.Json-net40-net451-fork</Title>
+    <Description>JSON configuration provider implementation for Ms.Extensions.Configuration.</Description>
+    <Title>Ms.Extensions.Configuration.Json-net40-net451-fork</Title>
     <PackageTags>configuration</PackageTags>
   </PropertyGroup>
 
