--- a/src/Microsoft.Extensions.Configuration.Xml/Microsoft.Extensions.Configuration.Xml.csproj
+++ b/src/Microsoft.Extensions.Configuration.Xml/Microsoft.Extensions.Configuration.Xml.csproj
@@ -11,8 +11,8 @@
 
   <PropertyGroup Label="NuGet">
     <PackageId>NetFx.Extensions.Configuration.Xml</PackageId>
-    <Description>XML configuration provider implementation for Microsoft.Extensions.Configuration.</Description>
-    <Title>Microsoft.Extensions.Configuration.Xml-net40-net451-fork</Title>
+    <Description>XML configuration provider implementation for Ms.Extensions.Configuration.</Description>
+    <Title>Ms.Extensions.Configuration.Xml-net40-net451-fork</Title>
     <PackageTags>configuration</PackageTags>
   </PropertyGroup>
 
