--- a/src/Microsoft.Extensions.Configuration/Microsoft.Extensions.Configuration.csproj
+++ b/src/Microsoft.Extensions.Configuration/Microsoft.Extensions.Configuration.csproj
@@ -11,8 +11,8 @@
 
   <PropertyGroup Label="NuGet">
     <PackageId>NetFx.Extensions.Configuration</PackageId>
-    <Description>Implementation of key-value pair based configuration for Microsoft.Extensions.Configuration. Includes the memory configuration provider.</Description>
-    <Title>Microsoft.Extensions.Configuration.Abstractions-net40-net451-fork</Title>
+    <Description>Implementation of key-value pair based configuration for Ms.Extensions.Configuration. Includes the memory configuration provider.</Description>
+    <Title>Ms.Extensions.Configuration.Abstractions-net40-net451-fork</Title>
     <PackageTags>configuration</PackageTags>
   </PropertyGroup>
 
