--- a/src/Microsoft.Extensions.FileSystemGlobbing/Microsoft.Extensions.FileSystemGlobbing.csproj
+++ b/src/Microsoft.Extensions.FileSystemGlobbing/Microsoft.Extensions.FileSystemGlobbing.csproj
@@ -12,7 +12,7 @@
   <PropertyGroup Label="NuGet">
     <PackageId>NetFx.Extensions.FileSystemGlobbing</PackageId>
     <Description>File system globbing to find files matching a specified pattern.</Description>
-    <Title>Microsoft.Extensions.FileSystemGlobbing-net40-net451-fork</Title>
+    <Title>Ms.Extensions.FileSystemGlobbing-net40-net451-fork</Title>
     <PackageTags>files;filesystem;glob;globbing</PackageTags>
   </PropertyGroup>
 
