--- a/src/Microsoft.Extensions.ObjectPool/Microsoft.Extensions.ObjectPool.csproj
+++ b/src/Microsoft.Extensions.ObjectPool/Microsoft.Extensions.ObjectPool.csproj
@@ -11,7 +11,7 @@
 
   <PropertyGroup Label="NuGet">
     <PackageId>NetFx.Extensions.ObjectPool</PackageId>
-    <Title>Microsoft.Extensions.ObjectPool-net40-net451-fork</Title>
+    <Title>Ms.Extensions.ObjectPool-net40-net451-fork</Title>
     <Description>A simple object pool implementation.</Description>
     <PackageTags>pooling</PackageTags>
   </PropertyGroup>
