--- a/src/Microsoft.Extensions.Options.ConfigurationExtensions/Microsoft.Extensions.Options.ConfigurationExtensions.csproj
+++ b/src/Microsoft.Extensions.Options.ConfigurationExtensions/Microsoft.Extensions.Options.ConfigurationExtensions.csproj
@@ -11,7 +11,7 @@
 
   <PropertyGroup Label="NuGet">
     <PackageId>NetFx.Extensions.Options.ConfigurationExtensions</PackageId>
-    <Title>Microsoft.Extensions.Options.ConfigurationExtensions-net40-net451-fork</Title>
+    <Title>Ms.Extensions.Options.ConfigurationExtensions-net40-net451-fork</Title>
     <Description>Provides additional configuration specific functionality related to Options.</Description>
     <PackageTags>aspnetcore;configuration;options</PackageTags>
   </PropertyGroup>
