--- a/src/Microsoft.Extensions.Primitives/Microsoft.Extensions.Primitives.csproj
+++ b/src/Microsoft.Extensions.Primitives/Microsoft.Extensions.Primitives.csproj
@@ -12,7 +12,7 @@
 
   <PropertyGroup Label="NuGet">
     <PackageId>NetFx.Extensions.Primitives</PackageId>
-    <Title>Microsoft.Extensions.Primitives-net40-net451-fork</Title>
+    <Title>Ms.Extensions.Primitives-net40-net451-fork</Title>
     <Description>Primitives shared by framework extensions.</Description>
     <PackageTags>primitives</PackageTags>
   </PropertyGroup>
@@ -32,7 +32,8 @@
     </EmbeddedResource>
   </ItemGroup>
   
-  <ItemGroup Condition=" '$(TargetFramework)' == 'net451' or  '$(TargetFramework)' == 'netstandard1.3' ">
+  <ItemGroup Condition=" '$(TargetFramework)' == 'net451' ">
+    <PackageReference Include="System.Memory" Version="$(SystemMemoryPackageVersion)" />
     <PackageReference Include="System.Runtime.CompilerServices.Unsafe" Version="$(SystemRuntimeCompilerServicesUnsafeVersion)" />
   </ItemGroup>
 </Project>
