--- a/src/System.Collections.Immutable/System.Collections.Immutable.csproj
+++ b/src/System.Collections.Immutable/System.Collections.Immutable.csproj
@@ -11,7 +11,7 @@
 
   <PropertyGroup Label="NuGet">
     <PackageId>Net40.Collections.Immutable</PackageId>
-    <Title>System.Collections.Immutable-net40-fork</Title>
+    <Title>Corefx.Collections.Immutable-net40-fork</Title>
     <Description>This package provides collections that are thread safe and guaranteed to never change their contents, also known as immutable collections. Like strings, any methods that perform modifications will not change the existing instance but instead return a new instance. For efficiency reasons, the implementation uses a sharing mechanism to ensure that newly created instances share as much data as possible with the previous instance while ensuring that operations have a predictable time complexity.</Description>
     <PackageTags>Regular</PackageTags>
   </PropertyGroup>
