--- a/src/System.Reflection.Metadata/System.Reflection.Metadata.csproj
+++ b/src/System.Reflection.Metadata/System.Reflection.Metadata.csproj
@@ -11,7 +11,7 @@
 
   <PropertyGroup Label="NuGet">
     <PackageId>Net40.Reflection.Metadata</PackageId>
-    <Title>System.Reflection.Metadata-net40-fork</Title>
+    <Title>Corefx.Reflection.Metadata-net40-fork</Title>
     <Description>This packages provides a low-level .NET (ECMA-335) metadata reader and writer. It's geared for performance and is the ideal choice for building higher-level libraries that intend to provide their own object model, such as compilers.</Description>
     <PackageTags>Regular</PackageTags>
   </PropertyGroup>
