--- a/src/System.Security.Claims/System.Security.Claims.csproj
+++ b/src/System.Security.Claims/System.Security.Claims.csproj
@@ -11,7 +11,7 @@
 
   <PropertyGroup Label="NuGet">
     <PackageId>Net40.Security.Claims</PackageId>
-    <Title>System.Security.Claims-net40-fork</Title>
+    <Title>Corefx.Security.Claims-net40-fork</Title>
     <Description>Provides classes that implement claims-based identity in the .NET Framework, including classes that represent claims, claims-based identities, and claims-based principals.</Description>
     <PackageTags>claims</PackageTags>
   </PropertyGroup>
