Directory.Build.props

--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -6,6 +6,11 @@
 
   <Import Project="build\dependencies.props" />
 
+  <!-- Ensure changes to this file cause project rebuilds. -->
+  <PropertyGroup>
+    <MSBuildAllProjects>$(MSBuildAllProjects);$(MSBuildThisFileFullPath)</MSBuildAllProjects>
+  </PropertyGroup>
+
   <PropertyGroup>
     <SignAssembly>True</SignAssembly>
     <AssemblyOriginatorKeyFile>$(SourceRoot)/build/StrongKey.snk</AssemblyOriginatorKeyFile>
