--- a/test/Directory.Build.props
+++ b/test/Directory.Build.props
@@ -1,9 +1,6 @@
 <Project>
-  <PropertyGroup>
-    <_ParentDirectoryBuildPropsPath Condition="'$(_DirectoryBuildPropsFile)' != ''">$([System.IO.Path]::Combine('..', '$(_DirectoryBuildPropsFile)'))</_ParentDirectoryBuildPropsPath>
-  </PropertyGroup>
-
-  <Import Project="$(_ParentDirectoryBuildPropsPath)" Condition="Exists('$(_ParentDirectoryBuildPropsPath)')"/>
+  <!-- Import parent Directory.build.props -->
+  <Import Project="..\Directory.Build.props" />
 
   <PropertyGroup>
     <IsPackable>false</IsPackable>
