--- a/test/FS.Globbing.Tests/FS.Globbing.Tests.csproj
+++ b/test/FS.Globbing.Tests/FS.Globbing.Tests.csproj
@@ -16,4 +16,8 @@
     <ProjectReference Include="..\..\src\Microsoft.Extensions.FileSystemGlobbing\Microsoft.Extensions.FileSystemGlobbing.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Service Include="{82a7f48d-3b50-4b1e-b82e-3ada8210c358}" />
+  </ItemGroup>
+
 </Project>
