--- a/test/Microsoft.Extensions.Options.Test/Microsoft.Extensions.Options.Test.csproj
+++ b/test/Microsoft.Extensions.Options.Test/Microsoft.Extensions.Options.Test.csproj
@@ -13,6 +13,11 @@
   <ItemGroup>
     <ProjectReference Include="..\..\src\Microsoft.Extensions.DependencyInjection\Microsoft.Extensions.DependencyInjection.csproj" />
     <ProjectReference Include="..\..\src\Microsoft.Extensions.Options.ConfigurationExtensions\Microsoft.Extensions.Options.ConfigurationExtensions.csproj" />
+    <ProjectReference Include="..\..\src\Microsoft.Extensions.Options.DataAnnotations\Microsoft.Extensions.Options.DataAnnotations.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Reference Include="System.ComponentModel.DataAnnotations" />
   </ItemGroup>
 
   <ItemGroup>
